Introduce ChronicleQueueing for the LogEvents